--- a/04-Omnifood-A-Food-Delivery-Startup/index.html
+++ b/04-Omnifood-A-Food-Delivery-Startup/index.html
@@ -568,11 +568,12 @@
                   the first meal is on us!
                 </p>
 
-                <form class="cta-form" action="#">
+                <form class="cta-form" name = "sign-up" netlify>
                   <div>
-                    <label for="full-name">Full Name</label>
+                    <label for="full-name" >Full Name</label>
                     <input
                       id="full-name"
+                      name="full-name"
                       type="text"
                       placeholder="John Smith"
                       required
@@ -582,6 +583,7 @@
                     <label for="email">Email Address</label>
                     <input
                       id="email"
+                      name="email"
                       type="email"
                       placeholder="me@gmail.com"
                       required
@@ -591,7 +593,7 @@
                     <label for="select-where"
                       >Where did you hear from us?</label
                     >
-                    <select id="select-where" required>
+                    <select id="select-where" name="select-where" required>
                       <option value="">Please choose one option</option>
                       <option value="friends">Friends and family</option>
                       <option value="Youtube">Youtube Video</option>
